# OpenCVPackage

./: pyproject.toml
src/OpenCVPackage/: __init__.py
src/OpenCVPackage/CV_classes/: blend_modes.py
src/OpenCVPackage/Compounds/: ImageViewerWithTimer.compound
src/OpenCVPackage/Factories/: UINodeFactory.py
src/OpenCVPackage/FunctionLibraries/: GeometricImageTransformationsLib.py  ImageBlendingLib.py  ImageFilteringLib.py  OpenCvLib.py  OpticalFlowLib.py
src/OpenCVPackage/Nodes/: PaintNode.py  ViewerNode.py
src/OpenCVPackage/Pins/: ImagePin.py
src/OpenCVPackage/Tools/: ImageViewerTool.py
src/OpenCVPackage/UI/: UICv_PaintNode.py  UICv_TransformNode.py  UIOpenCvBaseNode.py
