[project]
name = "OpenCVPackage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Younthing", email = "fanxingfu3344@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "imutils",
    "numpy",
    "scipy",
    "opencv-python",
    "pytesseract",
    "opencv-contrib-python"
]

[project.entry-points."uflow.packages"]
OpenCVPackage = "OpenCVPackage:OpenCVPackage"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
